storage/oauth2-proxy/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-proxy
  labels:
    app: auth-proxy
spec:
  selector:
    app: auth-proxy
  ports:
    - name: http
      port: 4180
      targetPort: 4180
      protocol: TCP
